--- a/locale/en.json
+++ b/locale/en.json
@@ -387,6 +387,7 @@
     "report": "Report",
     "points": "Points",
     "submit": "Submit",
+    "submitting": "Submitting...",
     "editorContent": "Editor Content",
     "editorTitle": "Editor Title",
     "editorContentPlaceholder": "Editor Content Placeholder",
